# sona-toki

./: .gitignore  .pre-commit-config.yaml  README.md  ipython.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/otokipona/: Cleaners.py  Filters.py  Preprocessors.py  Scorers.py  Tokenizers.py  Validators.py  __main__.py  constants.py  ilo.py  linku.json  utils.py
src/sonatoki/: Cleaners.py  Configs.py  Filters.py  Preprocessors.py  Scorers.py  Tokenizers.py  __main__.py  alphabetic.txt  constants.py  ilo.py  linku.json  sandbox.json  syllabic.txt  types.py  utils.py
tests/: test_cleaners.py  test_constructed_validator.py  test_filters.py  test_ilo.py  test_preprocessors.py  test_properties.py  test_scorers.py  test_tokenize.py  test_utils.py  test_validators.py
tests/tokenize_cases/: tokenize_sentences.yml  tokenize_sentences_tok.yml  tokenize_words.yml  tokenize_words_tok.yml
